remplissage sans finition

--- a/index.html
+++ b/index.html
@@ -7,12 +7,85 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="row bckImg">
+    <div class="col-md-12">
+      <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
+      <p class="text-center">Get paid on Time, every time.</p>
+      <p><a class="btn btn-lg btn-primary center-block" href="#" role="button">CREATE A FREE ACCOUNT</a></p>
+    </div>
+  </div>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="payments-calendar-icon.svg" alt="">
+      <h3 class="center-block">Quick</h3>
+      <p class="center-block">to create, send, and pay invoices</p>
+    </div>
+    <div class="col-md-4">
+      <img src="payments-calendar-icon.svg" alt="">
+      <h3 class="center-block">Beautiful</h3>
+      <p class="center-block">process for the freelancer and client</p>
+    </div>
+    <div class="col-md-4">
+      <img src="payments-calendar-icon.svg" alt="">
+      <h3 class="center-block">Secure</h3>
+      <p class="center-block">payments and quick disbursement</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <p class="text-center">SIMPLE PRICING:</p>
+    <p class="text-center">PAY WHEN YOU GET PAID</p>
+    <p class="text-center">$1 PER PAID INVOICE</p>
+    <p class="text-center">+2,9% & 30¢ transaction fee</p>
+  </div>
+
+  <div class="row">
+    <p>Credit cards supported now. ACH coming soon!</p>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
+      <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
+      <p>Increase your payment rate with Bonsai
+        Contracts: free bulletproof work contracts that are easy to create & e-sign.
+
+      Once the contract is signed, generate a payment schedule with one click. (ITALIQUE)Contracts are optional but recommended)</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
+    </div>
+  </div>
+
+  <div class="row">
+    <p>Ready to freelance like a pro?</p>
+    <p>Sign up here & get 5 FREE invoices.</p>
+    <button type="button" name="button">CREATE AN ACCOUNT</button>
+  </div>
+
+  <footer>
+    n
+  </footer>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
