--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <nav class="navbar">
+
+  </nav>
   <div class="row bckImg">
     <div class="col-md-12">
       <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
@@ -20,17 +23,17 @@
 
   <div class="row">
     <div class="col-md-4">
-      <img src="payments-calendar-icon.svg" alt="">
+      <img src="img/payments-calendar-icon.svg" alt="">
       <h3 class="center-block">Quick</h3>
       <p class="center-block">to create, send, and pay invoices</p>
     </div>
     <div class="col-md-4">
-      <img src="payments-calendar-icon.svg" alt="">
+      <img src="img/payments-mail-icon.svg" alt="">
       <h3 class="center-block">Beautiful</h3>
       <p class="center-block">process for the freelancer and client</p>
     </div>
     <div class="col-md-4">
-      <img src="payments-calendar-icon.svg" alt="">
+      <img src="img/payments-methods-icon.svg" alt="">
       <h3 class="center-block">Secure</h3>
       <p class="center-block">payments and quick disbursement</p>
     </div>
@@ -44,11 +47,12 @@
   </div>
 
   <div class="row">
-    <p>Credit cards supported now. ACH coming soon!</p>
+    <p <div class="text-center">Credit cards supported now. ACH coming soon!</p>
   </div>
 
   <div class="row">
     <div class="col-md-6">
+      <img class="img-responsive" src="img/welcome-invoices-graphic-1.png"/>
     </div>
     <div class="col-md-6">
       <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
@@ -61,22 +65,31 @@
 
   <div class="row">
     <div class="col-md-6">
+      <h3 class="text-center">Get paid on time with SmartPay</h3>
+      <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
+        Focus on the work you love, not on chasing money. (ITALIQUE)Currently in private beta.)</p>
     </div>
     <div class="col-md-6">
+      <img class="img-responsive" src="img/welcome-invoices-graphic-2.png"/>
     </div>
+  </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
+      <img class="img-responsive" src="img/welcome-invoices-graphic-3.png"/>
     </div>
     <div class="col-md-6">
+      <h3 class="text-center">Send & get paid with beautiful invoices</h3>
+      <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
+        Clients can pay quickly and securely via dcredit card. (ITALIQUE)ACH is coming soon.)</p>
     </div>
   </div>
 
   <div class="row">
-    <p>Ready to freelance like a pro?</p>
-    <p>Sign up here & get 5 FREE invoices.</p>
-    <button type="button" name="button">CREATE AN ACCOUNT</button>
+    <p class="text-center">Ready to freelance like a pro?</p>
+    <p class="text-center">Sign up here & get 5 FREE invoices.</p>
+    <button class="center-block" type="button" name="button">CREATE AN ACCOUNT</button>
   </div>
 
   <footer>
