--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Bonsaï</title>
+  <link rel="stylesheet" href="fonts/fontawesome/web-fonts-with-css/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -11,7 +12,7 @@
 </head>
 <body>
   <nav class="navbar">
-
+    <img src="img/logo-icon-white.png" alt="">
   </nav>
   <div class="row bckImg">
     <div class="col-md-12">
@@ -20,22 +21,25 @@
       <p><a class="btn btn-lg btn-primary center-block" href="#" role="button">CREATE A FREE ACCOUNT</a></p>
     </div>
   </div>
-
   <div class="row">
-    <div class="col-md-4">
-      <img src="img/payments-calendar-icon.svg" alt="">
-      <h3 class="center-block">Quick</h3>
-      <p class="center-block">to create, send, and pay invoices</p>
-    </div>
-    <div class="col-md-4">
-      <img src="img/payments-mail-icon.svg" alt="">
-      <h3 class="center-block">Beautiful</h3>
-      <p class="center-block">process for the freelancer and client</p>
-    </div>
-    <div class="col-md-4">
-      <img src="img/payments-methods-icon.svg" alt="">
-      <h3 class="center-block">Secure</h3>
-      <p class="center-block">payments and quick disbursement</p>
+    <div class="col-ms-12">
+      <div class="row">
+        <div class="col-md-4 blocGauche">
+          <img src="img/payments-calendar-icon.svg" class="center-block" alt="">
+          <h3 class="text-center text-left">Quick</h3>
+          <p class="text-center text-left">to create, send, and pay invoices</p>
+        </div>
+        <div class="col-md-4">
+          <img src="img/payments-mail-icon.svg" class="center-block" alt="">
+          <h3 class="text-center">Beautiful</h3>
+          <p class="text-center">process for the freelancer and client</p>
+        </div>
+        <div class="col-md-4 blocDroite">
+          <img src="img/payments-methods-icon.svg" class="center-block" alt="">
+          <h3 class="text-center">Secure</h3>
+          <p class="text-center">payments and quick disbursement</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -48,57 +52,105 @@
 
   <div class="row">
     <p <div class="text-center">Credit cards supported now. ACH coming soon!</p>
-  </div>
-
-  <div class="row">
-    <div class="col-md-6">
-      <img class="img-responsive" src="img/welcome-invoices-graphic-1.png"/>
     </div>
-    <div class="col-md-6">
-      <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
-      <p>Increase your payment rate with Bonsai
-        Contracts: free bulletproof work contracts that are easy to create & e-sign.
 
-      Once the contract is signed, generate a payment schedule with one click. (ITALIQUE)Contracts are optional but recommended)</p>
-    </div>
-  </div>
+    <div class="row textocenter">
+      <div class="fnddulimage1 col-md-5">
+        <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-5 col-md-offset-2 text-left">
+            <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
+            <p>Increase your payment rate with Bonsai
+              Contracts: free bulletproof work contracts that are easy to create & e-sign.</p>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h3 class="text-center">Get paid on time with SmartPay</h3>
-      <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
-        Focus on the work you love, not on chasing money. (ITALIQUE)Currently in private beta.)</p>
-    </div>
-    <div class="col-md-6">
-      <img class="img-responsive" src="img/welcome-invoices-graphic-2.png"/>
-    </div>
-  </div>
-  </div>
+              <p>Once the contract is signed, generate a payment schedule with one click. <em>Contracts are optional but recommended</em></p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <img class="img-responsive" src="img/welcome-invoices-graphic-3.png"/>
-    </div>
-    <div class="col-md-6">
-      <h3 class="text-center">Send & get paid with beautiful invoices</h3>
-      <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
-        Clients can pay quickly and securely via dcredit card. (ITALIQUE)ACH is coming soon.)</p>
-    </div>
-  </div>
+      <div class="row textocenter">
+        <div class="col-md-5 col-md-offset-2 text-left">
+          <h3 class="text-center">Get paid on time with SmartPay</h3>
+          <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
+            Focus on the work you love, not on chasing money. <em>Currently in private beta.</em></p>
+          </div>
+          <div class="fnddulimage2 col-md-5">
+            <img class="img-responsive center-block img-arrondie" src="img/welcome-invoices-graphic-2.png"/>
+          </div>
+        </div>
+      </div>
 
-  <div class="row">
-    <p class="text-center">Ready to freelance like a pro?</p>
-    <p class="text-center">Sign up here & get 5 FREE invoices.</p>
-    <button class="center-block" type="button" name="button">CREATE AN ACCOUNT</button>
-  </div>
+      <div class="row textocenter">
+        <div class="fnddulimage1 col-md-5">
+          <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-3.png"/>
+        </div>
+        <div class="col-md-5 col-md-offset-2 text-left">
+          <h3 class="text-center">Send & get paid with beautiful invoices</h3>
+          <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
+            Clients can pay quickly and securely via dcredit card. <em>ACH is coming soon.</em></p>
+          </div>
+        </div>
 
-  <footer>
-    n
-  </footer>
+        <div class="row">
+          <p class="text-center">Ready to freelance like a pro?</p>
+          <p class="text-center">Sign up here & get 5 <b>FREE</b> invoices.</p>
+          <button class="center-block btn-success" type="button" name="button">CREATE AN ACCOUNT</button>
+        </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-</body>
-</html>
+        <footer class="panel-footer colFoot">
+          <div class="row">
+            <div  class="col-md-7 col-md-offset-3">
+              <div class="col-md-4">
+                <ul class="text-left">
+                  <li>Products</li>
+                  <li>CONTRACTS</li>
+                  <li>PAYMENTS</li>
+                  <li>RATES</li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul class="text-left">
+                  <li>Company</li>
+                  <li>ABOUT</li>
+                  <li>BLOG</li>
+                  <li>FAQ</li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul class="text-left">
+                  <li>Contact</li>
+                  <li>760 Market St., 5th Floor</li>
+                  <li>San Francisco, CA 94102</li>
+                  <li>
+                    <i class="fas fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-5 col-md-offset-3">
+                <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
+                  legal services or advice, and does not provide or participate in
+                  legal representation. <b>Legal - Credits</b> </p>
+                </div>
+                <div class="col-md-2">
+                  <img src="img/badge_blue.png" alt="">
+
+                </div>
+              </div>
+            </div>
+          </footer>
+
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+          <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+        </body>
+        </html>
