--- a/index.html
+++ b/index.html
@@ -11,31 +11,67 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <img src="img/logo-icon-white.png" alt="">
-  </nav>
-  <div class="row bckImg">
-    <div class="col-md-12">
-      <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
-      <p class="text-center">Get paid on Time, every time.</p>
-      <p><a class="btn btn-lg btn-primary center-block" href="#" role="button">CREATE A FREE ACCOUNT</a></p>
+  <section id="Home">
+    <nav class="navbar">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-left">
+          <img src="img/logo-icon-white.png" class="img-responsive"/>
+          <p> B O N S A I</p>
+        </ul>
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <!-- <div class="navbar-header">
+          <button type="button" class="navbar collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Site Up</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <div class="row bidule">
+      <div class="col-md-12">
+        <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
+        <p class="text-center">Get paid on Time, every time.</p>
+        <p><a class="btn btn-lg btn-primary center-block" href="#" role="button">CREATE A FREE ACCOUNT</a></p>
+      </div>
+    </div>
+  </section>
+  <div class="row">
+    <div class="col-md-">
+
+    </div>
+    <div class="bubule">
+      <i class="fas fa-comments"></i>
     </div>
   </div>
   <div class="row">
     <div class="col-ms-12">
       <div class="row">
         <div class="col-md-4 blocGauche">
-          <img src="img/payments-calendar-icon.svg" class="center-block" alt="">
+          <img src="img/payments-calendar-icon.svg" class="center-block" alt=""/>
           <h3 class="text-center text-left">Quick</h3>
           <p class="text-center text-left">to create, send, and pay invoices</p>
         </div>
         <div class="col-md-4">
-          <img src="img/payments-mail-icon.svg" class="center-block" alt="">
+          <img src="img/payments-mail-icon.svg" class="center-block" alt=""/>
           <h3 class="text-center">Beautiful</h3>
           <p class="text-center">process for the freelancer and client</p>
         </div>
         <div class="col-md-4 blocDroite">
-          <img src="img/payments-methods-icon.svg" class="center-block" alt="">
+          <img src="img/payments-methods-icon.svg" class="center-block" alt=""/>
           <h3 class="text-center">Secure</h3>
           <p class="text-center">payments and quick disbursement</p>
         </div>
@@ -51,11 +87,11 @@
   </div>
 
   <div class="row">
-    <p <div class="text-center">Credit cards supported now. ACH coming soon!</p>
+    <div class="text-center">Credit cards supported now. ACH coming soon!</p>
     </div>
 
     <div class="row textocenter">
-      <div class="fnddulimage1 col-md-5">
+      <div class="fnddulimage1 col-md-6">
         <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
       </div>
       <div class="col-md-6">
@@ -102,6 +138,7 @@
 
         <footer class="panel-footer colFoot">
           <div class="row">
+
             <div  class="col-md-7 col-md-offset-3">
               <div class="col-md-4">
                 <ul class="text-left">
@@ -111,6 +148,7 @@
                   <li>RATES</li>
                 </ul>
               </div>
+
               <div class="col-md-4">
                 <ul class="text-left">
                   <li>Company</li>
@@ -119,6 +157,7 @@
                   <li>FAQ</li>
                 </ul>
               </div>
+
               <div class="col-md-4">
                 <ul class="text-left">
                   <li>Contact</li>
@@ -131,7 +170,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div><!-- /col md 7 -->
 
             <div class="row">
               <div class="col-md-5 col-md-offset-3">
@@ -141,9 +180,9 @@
                 </div>
                 <div class="col-md-2">
                   <img src="img/badge_blue.png" alt="">
-
                 </div>
               </div>
+
             </div>
           </footer>
 
