push du 18 au soir

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,10 +17,16 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-left">
           <li><img src="img/logo-icon-white.png" class="img-responsive"/></li>
-          <li><p><b>B O N S A I</b></p></li>
+          <li><p><b>BONSAI</b></p></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <li><a href="#">LOGIN</a></li>
           <li><a href="#">SIGN UP</a></li>
         </ul>
@@ -28,54 +35,57 @@
   </nav>
 
   <div class="row bidule spaceToplaboom">
-    <div class="col-md-12">
+    <div class="col-xs-12 blok-center">
       <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
       <p class="text-center"><b>Get paid on time, every time.</b></p>
-      <p><a class="btn btn-lg btn-primary center-block" href="#" role="button">CREATE A FREE ACCOUNT</a></p>
+      <div class="col-md-2 col-md-offset-5">
+        <button class="btn btn-default block-center btnhome" href="#" role="button">CREATE A FREE ACCOUNT</button>
+      </div>
     </div>
   </div>
 </section>
+<!-- partie Bulle -->
 <div class="row">
-  <div class="col-md-">
-
-  </div>
-  <div class="bubule">
-    <i class="fas fa-comments"></i>
-  </div>
 </div>
-<div class="row">
-  <div class="col-ms-12">
-    <div class="row">
-      <div class="col-md-4 blocGauche">
-        <img src="img/payments-calendar-icon.svg" class="center-block" alt=""/>
-        <h3 class="text-center text-left">Quick</h3>
-        <p class="text-center text-left">to create, send, and pay invoices</p>
-      </div>
-      <div class="col-md-4">
-        <img src="img/payments-mail-icon.svg" class="center-block" alt=""/>
-        <h3 class="text-center">Beautiful</h3>
-        <p class="text-center">process for the freelancer and client</p>
-      </div>
-      <div class="col-md-4 blocDroite">
-        <img src="img/payments-methods-icon.svg" class="center-block" alt=""/>
-        <h3 class="text-center">Secure</h3>
-        <p class="text-center">payments and quick disbursement</p>
+<div class="bubule">
+  <i class="fas fa-comments"></i>
+</div>
+</div>
+<section id="Infofo">
+  <div class="row" >
+    <div class="col-xs-12">
+      <div class="row">
+        <div class="col-md-4 blocGauche">
+          <img src="img/payments-calendar-icon.svg" class="center-block info1" alt=""/>
+          <h3 class="text-center text-left">Quick</h3>
+          <p class="text-center text-left">to create, send, and pay invoices</p>
+        </div>
+        <div class="col-md-4 blocCentre">
+          <img src="img/payments-mail-icon.svg" class="center-block info2" alt=""/>
+          <h3 class="text-center">Beautiful</h3>
+          <p class="text-center">process for the freelancer and client</p>
+        </div>
+        <div class="col-md-4 blocDroite">
+          <img src="img/payments-methods-icon.svg" class="center-block info3" alt=""/>
+          <h3 class="text-center">Secure</h3>
+          <p class="text-center">payments and quick disbursement</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-<div class="row">
-  <p class="text-center">SIMPLE PRICING:</p>
-  <p class="text-center">PAY WHEN YOU GET PAID</p>
-  <p class="text-center">$1 PER PAID INVOICE</p>
-  <p class="text-center">+2,9% & 30¢ transaction fee</p>
-</div>
-
-<div class="row">
-  <div class="text-center">Credit cards supported now. ACH coming soon!</p>
+</section>
+<section>
+  <div class="row">
+    <p class="text-center">SIMPLE PRICING:</p>
+    <p class="text-center">PAY WHEN YOU GET PAID</p>
+    <p class="text-center">$1 PER PAID INVOICE</p>
+    <p class="text-center">+2,9% & 30¢ transaction fee</p>
   </div>
 
+  <div class="row">
+    <div class="text-center">Credit cards supported now. ACH coming soon!</p>
+    </div>
+  </section>
   <div class="row textocenter">
     <div class="fnddulimage1 col-md-6">
       <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
@@ -123,7 +133,7 @@
       </div>
 
       <footer class="panel-footer colFoot">
-        <div class="row">
+        <div class="row nespacefoot">
 
           <div  class="col-md-7 col-md-offset-3">
             <div class="col-md-4">
@@ -150,16 +160,15 @@
                 <li>760 Market St., 5th Floor</li>
                 <li>San Francisco, CA 94102</li>
                 <li>
-                  <i class="fas fa-twitter" aria-hidden="true"></i>
+                  <i class="fab fa-twitter" aria-hidden="true"></i>
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <i class="fa fa-heart" aria-hidden="true"></i>
                 </li>
               </ul>
             </div>
-          </div><!-- /col md 7 -->
 
           <div class="row">
-            <div class="col-md-5 col-md-offset-3">
+            <div class="col-md-8">
               <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
                 legal services or advice, and does not provide or participate in
                 legal representation. <b>Legal - Credits</b> </p>
@@ -167,9 +176,9 @@
               <div class="col-md-2">
                 <img src="img/badge_blue.png" alt="">
               </div>
-            </div>
 
           </div>
+          </div><!-- /col md 7 -->
         </footer>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
