--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
   <section id="Home">
     <nav class="navbar">
       <div class="container-fluid">
@@ -51,6 +53,8 @@
   <i class="fas fa-comments"></i>
 </div>
 </div>
+
+
 <section id="Infofo">
   <div class="row" >
     <div class="col-xs-12">
@@ -74,7 +78,9 @@
     </div>
   </div>
 </section>
-<section>
+
+
+<section id="Pricing">
   <div class="row">
     <p class="text-center">SIMPLE PRICING:</p>
     <p class="text-center">PAY WHEN YOU GET PAID</p>
@@ -86,51 +92,58 @@
     <div class="text-center">Credit cards supported now. ACH coming soon!</p>
     </div>
   </section>
-  <div class="row textocenter">
-    <div class="fnddulimage1 col-md-6">
-      <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-5 col-md-offset-2 text-left">
-          <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
-          <p>Increase your payment rate with Bonsai
-            Contracts: free bulletproof work contracts that are easy to create & e-sign.</p>
 
-            <p>Once the contract is signed, generate a payment schedule with one click. <em>Contracts are optional but recommended</em></p>
+
+  <section id="img-et-Text">
+    <div class="row textocenter">
+      <div class="fnddulimage1 col-md-6">
+        <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-6 text-left">
+            <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
+            <p>Increase your payment rate with Bonsai
+              Contracts: free bulletproof work contracts that are easy to create & e-sign.</p>
+              <p>Once the contract is signed, generate a payment schedule with one click. <em>Contracts are optional but recommended</em></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row textocenter">
-      <div class="col-md-5 col-md-offset-2 text-left">
-        <h3 class="text-center">Get paid on time with SmartPay</h3>
-        <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
-          Focus on the work you love, not on chasing money. <em>Currently in private beta.</em></p>
-        </div>
-        <div class="fnddulimage2 col-md-5">
-          <img class="img-responsive center-block img-arrondie" src="img/welcome-invoices-graphic-2.png"/>
-        </div>
-      </div>
-    </div>
-
-    <div class="row textocenter">
-      <div class="fnddulimage1 col-md-5">
-        <img class="img-responsive img-arrondie" src="img/welcome-invoices-graphic-3.png"/>
-      </div>
-      <div class="col-md-5 col-md-offset-2 text-left">
-        <h3 class="text-center">Send & get paid with beautiful invoices</h3>
-        <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
-          Clients can pay quickly and securely via dcredit card. <em>ACH is coming soon.</em></p>
+      <div class="row textocenter">
+        <div class="col-md-6 text-left">
+          <h3 class="text-center">Get paid on time with SmartPay</h3>
+          <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
+            Focus on the work you love, not on chasing money. <em>Currently in private beta.</em></p>
+          </div>
+          <div class="fnddulimage2 col-md-6">
+            <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-2.png"/>
+          </div>
         </div>
       </div>
 
-      <div class="row">
-        <p class="text-center">Ready to freelance like a pro?</p>
-        <p class="text-center">Sign up here & get 5 <b>FREE</b> invoices.</p>
-        <button class="center-block btn-success" type="button" name="button">CREATE AN ACCOUNT</button>
-      </div>
+      <div class="row textocenter">
+        <div class="fnddulimage1 col-md-6">
+          <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-3.png"/>
+        </div>
+        <div class="col-md-6 text-left">
+          <h3 class="text-center">Send & get paid with beautiful invoices</h3>
+          <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
+            Clients can pay quickly and securely via dcredit card. <em>ACH is coming soon.</em></p>
+          </div>
+        </div>
+      </section>
+
+
+      <section id="ZoneReady">
+        <div class="row">
+          <p class="text-center">Ready to freelance like a pro?</p>
+          <p class="text-center">Sign up here & get 5 <b>FREE</b> invoices.</p>
+          <button class="center-block btn-success" type="button" name="button">CREATE AN ACCOUNT</button>
+        </div>
+      </section>
+
 
       <footer class="panel-footer colFoot">
         <div class="row nespacefoot">
@@ -167,24 +180,24 @@
               </ul>
             </div>
 
-          <div class="row">
-            <div class="col-md-8">
-              <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
-                legal services or advice, and does not provide or participate in
-                legal representation. <b>Legal - Credits</b> </p>
-              </div>
-              <div class="col-md-2">
-                <img src="img/badge_blue.png" alt="">
-              </div>
+            <div class="row">
+              <div class="col-md-8">
+                <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
+                  legal services or advice, and does not provide or participate in
+                  legal representation. <b>Legal - Credits</b> </p>
+                </div>
+                <div class="col-md-2">
+                  <img src="img/badge_blue.png" alt="">
+                </div>
 
-          </div>
-          </div><!-- /col md 7 -->
-        </footer>
+              </div>
+            </div><!-- /col md 7 -->
+          </footer>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-      </body>
-      </html>
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+          <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+        </body>
+        </html>
