--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 
   <section id="Home">
     <nav class="navbar">
@@ -79,17 +79,21 @@
   </div>
 </section>
 
-
 <section id="Pricing">
   <div class="row">
-    <p class="text-center">SIMPLE PRICING:</p>
-    <p class="text-center">PAY WHEN YOU GET PAID</p>
-    <p class="text-center">$1 PER PAID INVOICE</p>
-    <p class="text-center">+2,9% & 30¢ transaction fee</p>
+    <p class="text-center Princingtext">SIMPLE PRICING:</p>
+    <p class="text-center Princingtext">PAY WHEN YOU GET PAID</p>
+  </div>
+  <div class="row text-right">
+    <p class="text-center col-md-1 col-md-offset-4 Dolls"> $1 </p>
+    <div class=" col-md-3">
+      <p class="text-left Pricingtext2"><b>PER PAID INVOICE</b></p>
+      <p class="text-left">+2,9% & 30¢ transaction fee</p>
+    </div>
   </div>
 
   <div class="row">
-    <div class="text-center">Credit cards supported now. ACH coming soon!</p>
+    <div class="text-center bck-ACH"><p>Credit cards supported now. ACH coming soon!</p>
     </div>
   </section>
 
