--- a/index.html
+++ b/index.html
@@ -17,41 +17,42 @@
   <section id="Home">
     <nav class="navbar">
       <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-left">
-          <li><img src="img/logo-icon-white.png" class="img-responsive"/></li>
-          <li><p><b>BONSAI</b></p></li>
-        </ul>
+        <div class="row">
+          <ul class="nav navbar-nav navbar-left">
+            <li><img src="img/logo-icon-white.png" class="img-responsive"/></li>
+            <li><p><b>BONSAI</b></p></li>
+          </ul>
 
-        <ul class="nav navbar-nav navbar-right">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <li><a href="#">LOGIN</a></li>
-          <li><a href="#">SIGN UP</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+          <ul class="nav navbar-nav navbar-right col-md-2">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <li><a href="#">LOGIN</a></li>
+            <li><a href="#">SIGN UP</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
-  <div class="row bidule spaceToplaboom">
-    <div class="col-xs-12 blok-center">
-      <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
-      <p class="text-center"><b>Get paid on time, every time.</b></p>
-      <div class="col-md-2 col-md-offset-5">
-        <button class="btn btn-default block-center btnhome" href="#" role="button">CREATE A FREE ACCOUNT</button>
+    <div class="row bidule spaceToplaboom">
+      <div class="col-xs-12 blok-center">
+        <h1 class="text-center">Simple & Beautiful Payments for Freelancers</h1>
+        <p class="text-center"><b>Get paid on time, every time.</b></p>
+        <div class="col-md-2 col-md-offset-5">
+          <button class="btn btn-default block-center btnhome" href="#" role="button">CREATE A FREE ACCOUNT</button>
+        </div>
       </div>
     </div>
+  </section>
+  <!-- partie Bulle -->
+  <div class="row">
   </div>
-</section>
-<!-- partie Bulle -->
-<div class="row">
-</div>
-<div class="bubule">
-  <i class="fas fa-comments"></i>
-</div>
+  <div class="bubule">
+    <i class="fas fa-comments"></i>
+  </div>
 </div>
 
 
@@ -95,113 +96,110 @@
   <div class="row">
     <div class="text-center bck-ACH"><p>Credit cards supported now. ACH coming soon!</p>
     </div>
-  </section>
+  </div>
+</section>
 
 
-  <section id="img-et-Text">
+<section id="img-et-Text">
+  <div class="row textocenter">
+    <div class="fnddulimage1 col-md-6 col-xs-12">
+      <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
+    </div>
+    <div class="col-md-6 col-xs-12 text-left">
+      <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
+      <p>Increase your payment rate with Bonsai
+        Contracts: free bulletproof work contracts that are easy to create & e-sign.</p>
+        <p>Once the contract is signed, generate a payment schedule with one click. <em>Contracts are optional but recommended</em></p>
+      </div>
+    </div>
+
+    <div class="row textocenter1">
+      <div class="col-md-6 col-xs-12 text-left">
+        <h3 class="text-center">Get paid on time with SmartPay</h3>
+        <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
+          Focus on the work you love, not on chasing money. <em>Currently in private beta.</em></p>
+        </div>
+        <div class="fnddulimage2 col-md-6 col-xs-12">
+          <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-2.png"/>
+        </div>
+      </div>
+    </div>
+
     <div class="row textocenter">
-      <div class="fnddulimage1 col-md-6">
-        <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-1.png"/>
+      <div class="fnddulimage1 col-md-6 col-xs-12">
+        <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-3.png"/>
       </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-6 text-left">
-            <h3 class="text-center">Integrates deeply with Bonsai Contracts</h3>
-            <p>Increase your payment rate with Bonsai
-              Contracts: free bulletproof work contracts that are easy to create & e-sign.</p>
-              <p>Once the contract is signed, generate a payment schedule with one click. <em>Contracts are optional but recommended</em></p>
-            </div>
-          </div>
+      <div class="col-md-6 col-xs-12 text-left">
+        <h3 class="text-center">Send & get paid with beautiful invoices</h3>
+        <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
+          Clients can pay quickly and securely via dcredit card. <em>ACH is coming soon.</em></p>
         </div>
       </div>
+    </section>
 
-      <div class="row textocenter">
-        <div class="col-md-6 text-left">
-          <h3 class="text-center">Get paid on time with SmartPay</h3>
-          <p>Escrow-like deposits, smart reminders, soft collections, and much more background magic ensure you're paid on time.
-            Focus on the work you love, not on chasing money. <em>Currently in private beta.</em></p>
-          </div>
-          <div class="fnddulimage2 col-md-6">
-            <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-2.png"/>
-          </div>
-        </div>
+
+    <section id="ZoneReady">
+      <div class="row">
+        <p class="text-center">Ready to freelance like a pro?</p>
+        <p class="text-center">Sign up here & get 5 <b>FREE</b> invoices.</p>
+        <button class="center-block btn-success" type="button" name="button">CREATE AN ACCOUNT</button>
       </div>
+    </section>
 
-      <div class="row textocenter">
-        <div class="fnddulimage1 col-md-6">
-          <img class="img-responsive center-block Dcale img-arrondie" src="img/welcome-invoices-graphic-3.png"/>
-        </div>
-        <div class="col-md-6 text-left">
-          <h3 class="text-center">Send & get paid with beautiful invoices</h3>
-          <p>Create invoices and request payment with the click of a button. Customize them to your brand, then send via email or URL.
-            Clients can pay quickly and securely via dcredit card. <em>ACH is coming soon.</em></p>
+
+    <footer class="panel-footer colFoot">
+      <div class="row nespacefoot">
+
+        <div  class="col-md-7 col-md-offset-3">
+          <div class="col-md-4">
+            <ul class="text-left">
+              <li>Products</li>
+              <li>CONTRACTS</li>
+              <li>PAYMENTS</li>
+              <li>RATES</li>
+            </ul>
           </div>
-        </div>
-      </section>
 
+          <div class="col-md-4">
+            <ul class="text-left">
+              <li>Company</li>
+              <li>ABOUT</li>
+              <li>BLOG</li>
+              <li>FAQ</li>
+            </ul>
+          </div>
 
-      <section id="ZoneReady">
-        <div class="row">
-          <p class="text-center">Ready to freelance like a pro?</p>
-          <p class="text-center">Sign up here & get 5 <b>FREE</b> invoices.</p>
-          <button class="center-block btn-success" type="button" name="button">CREATE AN ACCOUNT</button>
-        </div>
-      </section>
+          <div class="col-md-4">
+            <ul class="text-left">
+              <li>Contact</li>
+              <li>760 Market St., 5th Floor</li>
+              <li>San Francisco, CA 94102</li>
+              <li>
+                <i class="fab fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
 
-
-      <footer class="panel-footer colFoot">
-        <div class="row nespacefoot">
-
-          <div  class="col-md-7 col-md-offset-3">
-            <div class="col-md-4">
-              <ul class="text-left">
-                <li>Products</li>
-                <li>CONTRACTS</li>
-                <li>PAYMENTS</li>
-                <li>RATES</li>
-              </ul>
-            </div>
-
-            <div class="col-md-4">
-              <ul class="text-left">
-                <li>Company</li>
-                <li>ABOUT</li>
-                <li>BLOG</li>
-                <li>FAQ</li>
-              </ul>
-            </div>
-
-            <div class="col-md-4">
-              <ul class="text-left">
-                <li>Contact</li>
-                <li>760 Market St., 5th Floor</li>
-                <li>San Francisco, CA 94102</li>
-                <li>
-                  <i class="fab fa-twitter" aria-hidden="true"></i>
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <i class="fa fa-heart" aria-hidden="true"></i>
-                </li>
-              </ul>
-            </div>
-
-            <div class="row">
-              <div class="col-md-8">
-                <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
-                  legal services or advice, and does not provide or participate in
-                  legal representation. <b>Legal - Credits</b> </p>
-                </div>
-                <div class="col-md-2">
-                  <img src="img/badge_blue.png" alt="">
-                </div>
-
+          <div class="row">
+            <div class="col-md-8">
+              <p>&copy;2016 Bonsai Inc. Bonsai is not a law firm, does not provide
+                legal services or advice, and does not provide or participate in
+                legal representation. <b>Legal - Credits</b> </p>
               </div>
-            </div><!-- /col md 7 -->
-          </footer>
+              <div class="col-md-2">
+                <img src="img/badge_blue.png" alt="">
+              </div>
 
-          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-          <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
-          <!-- Include all compiled plugins (below), or include individual files as needed -->
-          <script src="js/bootstrap.min.js"></script>
-        </body>
-        </html>
+            </div>
+          </div><!-- /col md 7 -->
+        </footer>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+      </body>
+      </html>
